start work on AsideNavigation. TournamentsSection: correct alignment

--- a/src/components/UI/MainNavigation/MainNavigation.module.css
+++ b/src/components/UI/MainNavigation/MainNavigation.module.css
@@ -24,10 +24,6 @@
 
 .mainNav ul li a {
   color: rgba(0, 0, 0, 0.88);
-  font-weight: 500;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .mainNav ul li a:hover {
@@ -52,8 +48,11 @@
   color: rgb(145, 202, 255);
 }
 
+/* .mainNav ul li a:focus, */
 .mainNav ul li a:focus-visible {
   outline-color: rgb(145, 202, 255);
+  padding: 10px;
+  border-radius: 25px;
 }
 
 .user {
