--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 html {
   /* -webkit-box-sizing: border-box; */
   box-sizing: border-box;
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  color: white;
 }
 
 *,
@@ -15,7 +20,6 @@ body {
   display: flex;
 
   text-align: center;
-  color: white;
   padding: 0;
   margin: 0;
 
@@ -40,6 +44,7 @@ aside {
   flex: 1;
   max-width: 250px;
 
+  display: flex;
   background-color: rgba(255, 255, 255, 0.1);
   margin: 16px;
   border-radius: 8px;
@@ -64,6 +69,7 @@ ul {
 
 a {
   text-decoration: none;
+  font-weight: 500;
   color: inherit;
 }
 
